# hypixelapi

./: README.md  pyproject.toml
docs/: conf.py  index.rst
hypixel/: general.py
hypyxel-Mathman2028/skyblock/: items.py
hypyxel_Mathman2028/skyblock/: auctionhouse.py  items.json
pyhypixel/: nbt.py
src/: __init__.py  bedwars.py  games.py  general.py
src/py-hypixel/skyblock/: bazaar.py  profiles.py
