[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypixel-Mathman2028"
version = "1.0.0"
authors = [
  { name="Mathman2028", email="mathman2028@gmail.com" },
]
description = "A python wrapper for the Hypixel API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Mathman2028/hypixelapi"
"Bug Tracker" = "https://github.com/Mathman2028/hypixelapi/issues"